--- a/index.html
+++ b/index.html
@@ -113,6 +113,17 @@
       font-size: 16px;
     }
 
+    @media screen and (max-width: 600px) {
+.filters label {
+        display: block;
+        margin-bottom: 8px;
+      }
+      table {
+  font-size: 14px;
+      }
+      td:nth-child(3), td:nth-child(5) { font-size: 14px; }
+      }
+    }
 
 @media screen and (max-width: 768px) {
   td:nth-child(5) {
