--- a/test_index.html
+++ b/test_index.html
@@ -289,6 +289,8 @@ async function loadData() {
     document.getElementById("lastUpdated").innerHTML = `データ更新日：${latestDateString} ｜ツールVer：<a href="https://www.kujitonari.net/loto_search_tool" target="_blank" style="color:#d94f4f;text-decoration:underline;">1.11.3</a>`;
 
     renderTable(data); // ← ここで呼ぶだけ（中に定義しない！）
+    renderStatistics("all");
+
   } catch (error) {
     console.error("データ読み込みエラー:", error);
   }
