🚀 v1.12.0 リリース：出現傾向の統計＋集計範囲切り替え機能を追加

--- a/test_index.html
+++ b/test_index.html
@@ -320,22 +320,20 @@ function renderStatistics(range = 50) {
     .map(([i, count]) => ({ num: i + 1, count }))
     .sort((a, b) => a.count - b.count)
     .slice(0, 10);
+// 表示
+document.getElementById("frequentNumbers").innerHTML =
+  '📈 出現回数が多い数字：<span class="nowrap-on-pc"><br />' +
+  topFreq.map(n =>
+  `<span><strong>${n.num}</strong><span style="font-weight:normal;">（${n.count}回）</span></span>`
+).join("") +
+  "</span>";
 
-  document.getElementById("frequentNumbers").innerHTML =
-    '📈 出現回数が多い数字：<span class="nowrap-on-pc"><br />' +
-    topFreq.map((n, i) =>
-      `<span><strong>${n.num}</strong><span style="font-weight:normal;">（${n.count}回）</span></span>` +
-      ((i + 1) % 5 === 0 ? "<br />" : "")
-    ).join("") +
-    "</span>";
-
-  document.getElementById("unseenNumbers").innerHTML =
-    '📉 出現回数が少ない数字：<span class="nowrap-on-pc"><br />' +
-    leastFreq.map((n, i) =>
-      `<span><strong>${n.num}</strong><span style="font-weight:normal;">（${n.count}回）</span></span>` +
-      ((i + 1) % 5 === 0 ? "<br />" : "")
-    ).join("") +
-    "</span>";
+document.getElementById("unseenNumbers").innerHTML =
+  '📉 出現回数が少ない数字：<span class="nowrap-on-pc"><br />' +
+  topFreq.map(n =>
+  `<span><strong>${n.num}</strong><span style="font-weight:normal;">（${n.count}回）</span></span>`
+).join("") +
+  "</span>";
 }
 
 // ★ここでloadDataの外にrenderTable関数を独立して書く！
