🚀 v1.12.0 リリース：出現傾向の統計＋集計範囲切り替え機能を追加

--- a/test_index.html
+++ b/test_index.html
@@ -330,7 +330,7 @@ document.getElementById("frequentNumbers").innerHTML =
 
 document.getElementById("unseenNumbers").innerHTML =
   '📉 出現回数が少ない数字：<span class="nowrap-on-pc"><br />' +
-  topFreq.map(n =>
+  leastFreq.map(n =>
   `<span><strong>${n.num}</strong><span style="font-weight:normal;">（${n.count}回）</span></span>`
 ).join("") +
   "</span>";
