🚀 v1.12.0 リリース：出現傾向の統計＋集計範囲切り替え機能を追加

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
       border-radius: 10px;
       margin-bottom: 12px;
     }
+
+    .filters2 {
+      background: #ffecec;
+      border: 1px solid #ffd4d4;
+      padding: 10px;
+      border-radius: 10px;
+      margin-bottom: 12px;
+    }   
+
     .scroll-container {
       background: #ffffff;
       border: 1px solid #ffd4d4;
@@ -131,6 +140,20 @@
   }
 }
 
+@media screen and (min-width: 769px) {
+  #frequentNumbers span,
+  #unseenNumbers span {
+    display: inline-block;
+    white-space: nowrap;
+    margin-right: 8px;
+  }
+
+  #frequentNumbers br,
+  #unseenNumbers br {
+    display: none;
+  }
+}
+
 </style>
 </head>
 <body>
@@ -193,6 +216,18 @@
   <i class="fas fa-rotate-right"></i> リセット
 </button>
 <p id="resultCount" style="margin-top: 10px; font-weight: bold;"></p>
+
+<div class="filters2">
+<div id="rangeSelector" class="range-buttons" style="margin-top: 8px;">
+  <button type="button" onclick="renderStatistics('all')" style="margin-right: 5px; padding: 5px 10px;">全期間</button>
+  <button type="button" onclick="renderStatistics(100)" style="margin-right: 5px; padding: 5px 10px;">直近100回</button>
+  <button type="button" onclick="renderStatistics(50)" style="margin-right: 5px; padding: 5px 10px;">50回</button>
+  <button type="button" onclick="renderStatistics(20)" style="padding: 5px 10px;">20回</button>
+</div>
+<div id="frequentNumbers" style="margin-top: 10px; font-weight: bold;"></div>
+<div id="unseenNumbers" style="margin-top: 4px; font-weight: bold;"></div>
+</div>
+
 </div>
 <div class="scroll-container" id="scrollContainer">
 <table id="resultTable">
@@ -251,12 +286,54 @@ async function loadData() {
     const latestDate = new Date(Math.max(...data.map(item => new Date(item["日付"]))));
     const latestDateString = latestDate.toLocaleDateString("ja-JP");
 
-    document.getElementById("lastUpdated").innerHTML = `データ更新日：${latestDateString} ｜ツールVer：<a href="https://www.kujitonari.net/loto_search_tool" target="_blank" style="color:#d94f4f;text-decoration:underline;">1.11.3</a>`;
+    document.getElementById("lastUpdated").innerHTML = `データ更新日：${latestDateString} ｜ツールVer：<a href="https://www.kujitonari.net/loto_search_tool" target="_blank" style="color:#d94f4f;text-decoration:underline;">1.12.0</a>`;
 
     renderTable(data); // ← ここで呼ぶだけ（中に定義しない！）
+    renderStatistics("all");
+
   } catch (error) {
     console.error("データ読み込みエラー:", error);
   }
+}
+
+function renderStatistics(range = 50) {
+  const targetData =
+    range === "all" ? data :
+    typeof range === "number" ? data.slice(0, range) : [];
+
+  const allNumbers = Array(37).fill(0); // ロト7は1〜37
+
+  targetData.forEach(item => {
+    [
+      item["第1数字"], item["第2数字"], item["第3数字"],
+      item["第4数字"], item["第5数字"], item["第6数字"], item["第7数字"]
+    ].map(Number)
+     .forEach(n => allNumbers[n - 1]++);
+  });
+
+  const topFreq = [...allNumbers.entries()]
+    .map(([i, count]) => ({ num: i + 1, count }))
+    .sort((a, b) => b.count - a.count)
+    .slice(0, 10);
+
+  const leastFreq = [...allNumbers.entries()]
+    .map(([i, count]) => ({ num: i + 1, count }))
+    .sort((a, b) => a.count - b.count)
+    .slice(0, 10);
+// 表示
+document.getElementById("frequentNumbers").innerHTML =
+  '📈 出現回数が多い数字：<span class="nowrap-on-pc"><br />' +
+  topFreq.map(n =>
+  `<span><strong>${n.num}</strong><span style="font-weight:normal;">（${n.count}回）</span></span>`
+).join("") +
+  "</span>";
+
+document.getElementById("unseenNumbers").innerHTML =
+  '📉 出現回数が少ない数字：<span class="nowrap-on-pc"><br />' +
+  leastFreq.map(n =>
+  `<span><strong>${n.num}</strong><span style="font-weight:normal;">（${n.count}回）</span></span>`
+).join("") +
+  "</span>";
 }
 
 // ★ここでloadDataの外にrenderTable関数を独立して書く！
@@ -355,6 +432,7 @@ document.getElementById("resultCount").textContent =
 
   document.addEventListener("DOMContentLoaded", () => {
     loadData().then(() => attachSortEvents());
+    renderStatistics("all"); // 明示的に全期間の統計を表示
   });
 
   function resetFilters() {
