--- a/test_index.html
+++ b/test_index.html
@@ -4,6 +4,15 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8TC6C8CG1T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8TC6C8CG1T');
+</script>
 <!-- AdSense 広告スクリプト -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2136896785327919"
      crossorigin="anonymous"></script>
@@ -122,6 +131,23 @@
       font-size: 16px;
     }
 
+.csv-btn {
+  background: #46b955 !important;
+  color: #fff !important;
+  border: none;
+  border-radius: 8px;
+  padding: 8px 16px;
+  font-size: 16px;
+  font-weight: bold;
+  font-family: "Helvetica Neue", sans-serif;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+.csv-btn:hover, .csv-btn:focus {
+  background: #36903d !important;
+  color: #fff !important;
+}
+
     @media screen and (max-width: 600px) {
 .filters label {
         display: block;
@@ -182,10 +208,6 @@
 <span class="info-icon" onclick="showPopup(event, '7つの本数字の合計が160未満の回です。')">ⓘ</span>
 <label><input class="feature" type="checkbox" value="合計大きめ"/> 合計大きめ</label>
 <span class="info-icon" onclick="showPopup(event, '7つの本数字の合計が160以上の回です。')">ⓘ</span>
-<label><input class="feature" type="checkbox" value="10番台集中"/> 10番台集中</label>
-<span class="info-icon" onclick="showPopup(event, '10〜19の数字が3つ以上含まれる構成です。')">ⓘ</span>
-<label><input class="feature" type="checkbox" value="30番台多め"/> 30番台多め</label>
-<span class="info-icon" onclick="showPopup(event, '30〜37の数字が3つ以上含まれる構成です。')">ⓘ</span>
 <label><input class="feature" type="checkbox" value="高低ミックス"/> 高低ミックス</label>
 <span class="info-icon" onclick="showPopup(event, '10未満と30超の数字が両方含まれる構成です。')">ⓘ</span>
 <label><input class="feature" type="checkbox" value="キャリーあり"/> キャリーあり</label>
@@ -215,6 +237,12 @@
 <button onclick="resetFilters()" style="margin-left: 10px;">
   <i class="fas fa-rotate-right"></i> リセット
 </button>
+
+<!-- ★CSV出力ボタン追加 -->
+<button onclick="downloadCSV()" class="csv-btn" style="margin-left: 10px;">
+  <i class="fas fa-file-csv"></i> CSV出力
+</button>
+
 <p id="resultCount" style="margin-top: 10px; font-weight: bold;"></p>
 
 <div class="filters2">
@@ -286,7 +314,7 @@ async function loadData() {
     const latestDate = new Date(Math.max(...data.map(item => new Date(item["日付"]))));
     const latestDateString = latestDate.toLocaleDateString("ja-JP");
 
-    document.getElementById("lastUpdated").innerHTML = `データ更新日：${latestDateString} ｜ツールVer：<a href="https://www.kujitonari.net/loto_search_tool" target="_blank" style="color:#d94f4f;text-decoration:underline;">1.12.0</a>`;
+    document.getElementById("lastUpdated").innerHTML = `データ更新日：${latestDateString} ｜ツールVer：<a href="https://www.kujitonari.net/loto_search_tool" target="_blank" style="color:#d94f4f;text-decoration:underline;">1.12.1</a>`;
 
     renderTable(data); // ← ここで呼ぶだけ（中に定義しない！）
     renderStatistics("all");
@@ -501,6 +529,46 @@ function attachSortEvents() {
   });
 }
 
+function downloadCSV() {
+  const table = document.getElementById("resultTable");
+  const rows = Array.from(table.querySelectorAll("tbody tr"));
+  if (rows.length === 0) {
+    alert("出力できるデータがありません。");
+    return;
+  }
+  // ヘッダー取得
+  const headers = Array.from(table.querySelectorAll("thead th")).map(th => th.textContent.replace(/🔽|\s/g, ""));
+  // 各行のデータ取得
+  const csvRows = [
+    headers.join(","), // 1行目はヘッダー
+    ...rows.map(row =>
+      Array.from(row.children)
+        .map(td => {
+          let text = td.textContent.replace(/\n/g, "").trim();
+          // ダブルクオートを含む場合はエスケープ
+          if (text.includes('"') || text.includes(',') || text.includes('\n')) {
+            text = `"${text.replace(/"/g, '""')}"`;
+          }
+          return text;
+        })
+        .join(",")
+    )
+  ];
+  const csvString = csvRows.join("\r\n");
+  const blob = new Blob([csvString], { type: "text/csv" });
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement("a");
+  a.href = url;
+  a.download = "loto6_result.csv";
+  document.body.appendChild(a);
+  a.click();
+  document.body.removeChild(a);
+  URL.revokeObjectURL(url);
+}
+
 </script>
+<footer style="margin-top: 40px; text-align: center; font-size: 13px; color: #666;">
+  © 2025 <a href="https://www.kujitonari.net/" target="_blank" style="color: #d94f4f; text-decoration: none; font-weight: bold;">tonari</a>. All rights reserved.
+</footer>
 </body>
 </html>
