--- a/index.html
+++ b/index.html
@@ -86,6 +86,30 @@
     #scrollTopBtn { bottom: 70px; }
     #scrollBottomBtn { bottom: 20px; }
 
+.button-row {
+  display: flex;
+  justify-content: flex-start; /* 左寄せ。中央揃えならcenterに */
+  align-items: center;
+  gap: 6px; /* ボタン間の隙間は適度に */
+  margin-bottom: 8px;
+}
+.button-row button, .button-row .csv-btn {
+  flex: none;        /* 幅は広がらない */
+  min-width: unset;  /* 最小幅指定なし。必要最小限の幅に */
+  width: auto;       /* 幅は自動 */
+  padding: 7px 10px;
+  font-size: 15px;
+}
+@media screen and (max-width: 600px) {
+  .button-row {
+    gap: 3px;
+  }
+  .button-row button, .button-row .csv-btn {
+    font-size: 14px;
+    padding: 6px 7px;
+  }
+}
+
     .info-icon {
       display: inline-block;
       margin-left: 6px;
@@ -230,13 +254,17 @@
 </select>
 </div>
 </div>
-<button onclick="filterResults()">
-  <i class="fas fa-magnifying-glass"></i> 検索
-</button>
-
-<button onclick="resetFilters()" style="margin-left: 10px;">
-  <i class="fas fa-rotate-right"></i> リセット
-</button>
+<div class="button-row">
+  <button onclick="filterResults()">
+    <i class="fas fa-magnifying-glass"></i> 検索
+  </button>
+  <button onclick="resetFilters()">
+    <i class="fas fa-rotate-right"></i> リセット
+  </button>
+  <button onclick="downloadCSV()" class="csv-btn">
+    <i class="fas fa-file-csv"></i> CSV出力
+  </button>
+</div>
 
 <!-- ★CSV出力ボタン追加 -->
 <button onclick="downloadCSV()" class="csv-btn" style="margin-left: 10px;">
