--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ async function loadData() {
     const latestDate = new Date(Math.max(...data.map(item => new Date(item["日付"]))));
     const latestDateString = latestDate.toLocaleDateString("ja-JP");
 
-    document.getElementById("lastUpdated").innerHTML = `データ更新日：${latestDateString} ｜ツールVer：<a href="https://www.kujitonari.net/loto_search_tool" target="_blank" style="color:#d94f4f;text-decoration:underline;">1.13.0</a>`;
+    document.getElementById("lastUpdated").innerHTML = `データ更新日：${latestDateString} ｜ツールVer：<a href="https://www.kujitonari.net/loto_search_tool" target="_blank" style="color:#d94f4f;text-decoration:underline;">1.13.1</a>`;
 
     renderTable(data); // ← ここで呼ぶだけ（中に定義しない！）
     renderStatistics("all");
@@ -530,15 +530,16 @@ function sortTable(columnIndex) {
     let bText = b.children[columnIndex].textContent.trim();
 
     // 🔽 ここがポイント：「・」区切りがある列（ボーナスなど）の1番目の数値を使って比較
-const extractNumber = str => {
-  if (!str) return 0;
-  const cleaned = str.replace(/[^\d]/g, ""); // 数字以外（カンマ・円など）を除去
-  return parseInt(cleaned, 10) || 0;
-};
+const extractNumberFromYen = str => Number(str.replace(/[^\d]/g, '')) || 0;
 
-    // 🔄 修正対象：index 3 = ボーナス列、index 5 以降 = 賞金列など数値として比較すべき列
-const aVal = (columnIndex === 3 || columnIndex === 0 || columnIndex >= 5) ? extractNumber(aText) : aText;
-const bVal = (columnIndex === 3 || columnIndex === 0 || columnIndex >= 5) ? extractNumber(bText) : bText;
+// ...
+const aVal = (columnIndex === 0 || columnIndex === 3 || columnIndex >= 5)
+  ? extractNumberFromYen(aText)
+  : aText;
+
+const bVal = (columnIndex === 0 || columnIndex === 3 || columnIndex >= 5)
+  ? extractNumberFromYen(bText)
+  : bText;
 
     return isAsc
       ? (aVal > bVal ? 1 : -1)
